--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - ./app:/app
     command: >
       sh -c "python manage.py wait_for_db &&
+             python manage.py migrate &&
              python manage.py runserver 0.0.0.0:9000"
     environment:
       - DB_HOST=db
@@ -23,6 +24,8 @@ services:
     image: postgres:17-alpine3.21
     volumes:
       - dev-db-data:/var/lib/postgresql/data
+    ports:
+      - "5434:5432"
     environment:
       - POSTGRES_DB=devdb
       - POSTGRES_USER=devuser
